[project]
name = "land"
description = "Land server for uploading and retrieving DOF checkpoints"
version = "0.0.1"
readme = "README.md"
requires-python = ">=3.11"
keywords = ["conda"]
authors = [
  { name = "Sophia Castellarin", email = "sophia.castellarin@quansight.com" },
]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
land = { path = ".", editable = true }

[tool.pixi.tasks]
fastapi = "uvicorn land.main:app --reload"

[tool.pixi.dependencies]
fastapi = ">=0.115.8,<0.116"
uvicorn = ">=0.34.0,<0.35"
