[project]
name = "park"
description = "server for uploading and retrieving DOF checkpoints"
version = "0.0.1"
readme = "README.md"
requires-python = ">=3.11"
keywords = ["conda"]
authors = [
  { name = "Sophia Castellarin", email = "sophia.castellarin@quansight.com" },
]
dependencies = ["fastapi", "uvicorn"]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
park = { path = ".", editable = true }

[tool.pixi.tasks]
dev = "uvicorn park.main:app --reload"
start = "uvicorn park.main:app --host 0.0.0.0"
